--- a/form.html
+++ b/form.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/estiloform.css">
-    <link rel="shortcut icon" href="img/CCXE7COSDRCAHEXADF4ESEVG6U.webp">
+    <link rel="stylesheet" href="./css/estiloform.css">
+    <link rel="shortcut icon" href="./img/CCXE7COSDRCAHEXADF4ESEVG6U.webp">
     <title>Formulario/Jordan.pe</title>
 </head>
 <body>
