--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio/Jordan.pe</title>
-    <link rel="stylesheet" href="css/estiloindex.css">
-    <link rel="shortcut icon" href="img/CCXE7COSDRCAHEXADF4ESEVG6U.webp">
+    <link rel="stylesheet" href="./css/estiloindex.css">
+    <link rel="shortcut icon" href="./img/CCXE7COSDRCAHEXADF4ESEVG6U.webp">
 </head>
 <body>
     <header>
